Remove bogus ASSERT in WebFrameProxy::didStartProvisionalLoad https://bugs.webkit.org/show_bug.cgi?id=109733

Reviewed by Sam Weinig.

After http://trac.webkit.org/changeset/142555, this ASSERT is
triggering on these tests:

fast/dom/window-load-crash.html
fast/frames/seamless/seamless-hyperlink-named.html
fast/frames/seamless/seamless-hyperlink.html

The ASSERT appears to be bogus. This patch removes it.

* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didStartProvisionalLoad):


Canonical link: https://commits.webkit.org/128027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142807 268f45cc-cd09-0410-ab3c-d52691b4dbfc